kasten/kasten-validate-ns-by-preset-label/.chainsaw-test/ns-bad.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k10-validatens-badns01
  labels:
    dataprotection: foo-bar
---
apiVersion: v1
kind: Namespace
metadata:
  name: k10-validatens-badns02
